Bug 99377 - Ksysguard Applet won't reattach displays
Summary: Ksysguard Applet won't reattach displays
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-14 16:56 UTC by Anthony J Moulen
Modified: 2008-12-05 01:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony J Moulen 2005-02-14 16:56:03 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Gentoo Packages
Compiler:          gcc version 3.4.3 20041125 (Gentoo Linux 3.4.3-r1, ssp-3.4.3-0, pie-8.7.7)
 
OS:                Linux

The Ksysguard applet will not reattach a display if the remote server you are monitoring goes down then comes back.  I have to restart KDE or remove and readd the display again.  The same is true of a local display if ksysguardd crashes or didn't start before boot.  Instead you just get a display with an icon showing it couldn't attach to the monitor.  I should be able to get it to attempt to reattach without restarting KDE or removing and recreating the display.
Comment 1 Paolo Peruzzi 2006-11-24 23:47:34 UTC
Seems to be the equal problem:

My network monitor applet doesn't reattach if its interface was down once or not already started after starting KDE or if I need to restart that network interface.
Comment 2 John Tapsell 2006-12-16 19:48:14 UTC
This is now mostly fixed.  It's more robust now but not perfect.
Comment 3 devsk 2007-03-12 04:08:19 UTC
ksysguard kicker applet network monitor display gives error after iface stop, rmmod of nic module and restart. The status is shown as error. This is with the latest ksysguard 3.5.6. Are we going to see a fix for this issue sometime?
Comment 4 John Tapsell 2008-12-05 01:26:27 UTC
SVN commit 892692 by johnflux:

Don't go crazy if told to reconfigure.
This fixes some very old bugs

BUG:99377
BUG:164851
BUG:176160
BUG:78138



 M  +3 -7      SensorAgent.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=892692