Don't go crazy if told to reconfigure. This fixes some very old bugs

BUG:99377
BUG:164851
BUG:176160
BUG:78138


svn path=/trunk/KDE/kdebase/workspace/; revision=892692